samples/good/40.water
# 40.water
#
# Test of star syntax.
#

>
  a -> 'b' 'a'* 'c'
    : print('rule a parsed')
  statement --> a

baac
baaac
bc
